--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,14 +9,30 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css">
   <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-  <input type="file" id="file">
-  <!-- <audio id="music" controls></audio> -->
-  <div class="rythm-bass borderColor3">
-    <h2>Music Start!</h2>
-  </div>
+  <header>
+    <input type="file" id="file">
+    <!-- <audio id="music" controls></audio> -->
+  </header>
+  <main>
+    <div class="rythm-area">
+      <canvas id="sample" class="rythm-bass"></canvas>
+      <div class="rythm-bass">
+        <h2>Music Start!</h2>
+      </div>
+      <div class="rythm-bass square"></div>
+      <div class="rythm-bass square"></div>
+      <!-- <canvas id="visualizer" height="255"></canvas> -->
+    </div>
+  </main>
+  <footer>
+    <p>&copy; 2020 Tanukizzan</p>
+    <p>rythm.js</p>
+  </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/rythm.js/2.2.5/rythm.min.js"></script>
   <script src="./script.js"></script>
 </body>
+
 </html>
